--- a/views/auth/signup.pug
+++ b/views/auth/signup.pug
@@ -16,4 +16,5 @@ block content
 			.form-control
 				label(for="confirmPassword") Confirm password
 				input#confirmPassword(type="password", name="confirmPassword")
+			input(type="hidden", name="_csrf", value=csrfToken)
 			button.btn(type="submit") Signup
