--- a/views/includes/add-to-cart.pug
+++ b/views/includes/add-to-cart.pug
@@ -1,4 +1,5 @@
 if isAuthenticated
 	form(action="/cart", method="POST")
-		button.btn(type="submit") Add to cart
 		input(type="hidden", name="productId", value=product._id)
+		input(type="hidden", name="_csrf", value=csrfToken)
+		button.btn(type="submit") Add to cart
